--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
 :root {
-    /* --primary: #354f52;
-    --text-color: #cad2c5;
-    --shadow: #2f3e46; */
     --primary: #25064c;
     --text-color: #c2afd8;
     --shadow: #000000;
@@ -24,15 +21,22 @@
 }
 
 .nav-bar {
-    height: 66.4px;
     width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
     position: fixed;
     background-color: var(--primary);
     z-index: 1;
+}
+
+.main-nav {
+    width: 100%;
+    height: 66.4px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 
@@ -72,6 +76,7 @@ a {
 
 #collapse-menu {
     height: 0;
+    width: 100%;
     overflow: hidden;
     transition: height 0.5s ease-out;
 }
@@ -311,10 +316,8 @@ footer {
 
 @media (max-width: 600px) {
     .nav-bar {
-        height: 66.4px;
         justify-content: space-between;
         align-items: center;
-        position: static;
     }
 
     .links {
